Generator/Tests/NeedleFrameworkTests/Fixtures/InvalidInits/InvalidInits3.swift
let comp5 = My5Component   (  parent   :    selfh)
